# school-x-back

post_app_async/: dependency.py  main.py  pyproject.toml
post_app_async/adapters/storage/: base.py  s3.py
post_app_async/api/: auth.py  posts.py
post_app_async/core/: config.py  database.py  handlers.py
post_app_async/repositories/: posts.py  users.py
post_app_async/services/: posts.py  user.py
schoolx-1-task/: .dockerignore  Dockerfile  README.md  api_key_generator.py  docker-compose.yml  example.env  main.py  pyproject.toml  ruff.toml
schoolx-1-task/migration/: env.py
schoolx-1-task/migration/versions/: 4966c94bdea8_add_avatar_url_task.py  7c9b0f1a2d34_add_comments.py  d673870a3ced_add_auth_and_task_user_id.py  f5ebb2df21e0_init.py
schoolx-1-task/src/api/: __init__.py  pagination.py
schoolx-1-task/src/api/auth/: dependencies.py  exceptions.py  router.py  schema.py  security.py  service.py
schoolx-1-task/src/api/comment/: exceptions.py  response.py  router.py  schema.py  service.py
schoolx-1-task/src/api/system/: __init__.py  router.py
schoolx-1-task/src/api/task/: exceptions.py  response.py  router.py  schema.py  service.py
schoolx-1-task/src/api/user/: exceptions.py  response.py  router.py  schema.py  service.py
schoolx-1-task/src/app/: app.py  config.py  exceptions.py
schoolx-1-task/src/app/services/: __init__.py  minio.py
schoolx-1-task/src/database/: database.py  sql_enums.py
schoolx-1-task/tests/: conftest.py
schoolx-1-task/tests/integration/: test_task_endpoints.py
schoolx-1-task/tests/unit/: test_task_service.py
(+9 files in other folders)
