[project]
name = "post-app-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.48",
]
