[project]
name = "schoolx-1"
version = "0.1.0"
description = "API для управления задач"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.18.3",
  "argon2-cffi>=25.1.0",
  "asyncpg>=0.31.0",
  "cryptography>=46.0.4",
  "fastapi[standard]>=0.128.0",
  "pyjwt>=2.10.1",
  "sqlalchemy>=2.0.46",
  "starlette-exporter>=0.23.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "httpx>=0.28.1",
  "aiosqlite>=0.21.0",
]
